# mini-perplefixty

./: .gitignore  old_graph.py  pyproject.toml  settings.py  test.py  test_chat.py
src/: custom_logging.py
src/agents/: base.py  final_repot.py  planner.py  reporter.py  reviewer.py  router.py  selector.py
src/builder/: config.py  graph.py
src/models/: openai_models.py
src/nodes/: base.py  final_report.py  planner.py  reporter.py  reviewer.py  router.py  scraper.py  selector.py  serper.py
src/prompts/: planner.py  reporter.py  reviewer.py  router.py  selector.py
src/states/: state.py
src/tools/: basic_scraper.py  google_serper.py
src/utils/: helper_functions.py
