[project]
name = "mini-perplefixty"
version = "0.1.0"
description = ""
authors = [
    {name = "Vesa Alexandru"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.12.2"
dependencies = [
    "langgraph (>=0.2.69,<0.3.0)",
    "chainlit (>=2.1.0,<3.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "langchain-core (>=0.3.33,<0.4.0)",
    "beautifulsoup4 (==4.12.3)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
